refactor(box): migrate to Virtual Threads (JDK 21) for async operations
Agent-Logs-Url: https://github.com/TrieuNam/GameServer/sessions/7b9cd624-3071-4d61-963b-37a7ece516c7

Co-authored-by: TrieuNam <37394331+TrieuNam@users.noreply.github.com>